--- a/inst/rmarkdown/templates/internalmigration/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/internalmigration/skeleton/skeleton.Rmd
@@ -3,7 +3,7 @@ title: "Internal Migration Lab"
 output: html_document
 ---
 
-In this lab, we'll take a look at household movement within and into the five borough of New York City between 2013 and 2014.  As always, we'll start by loading our libraries.
+In this lab, we'll take a look at household movement within and into the five boroughs of New York City between 2014 and 2015.  As always, we'll start by loading our libraries.
  
 ```{r, echo=FALSE, message=FALSE}
 # Load your libraries here
@@ -14,9 +14,9 @@ library('printr')
 
 ```
 
-For this lab, we'll use American Community Survey data.  To help keep response rates for the Census near 100%, in the 1990's, the Census Bureau decided to make the Census shorter, and to get rid of the Long Form Census that was administered to a portion of the population.  They found that longer questionnaires yielded lower response rates.  So, the Census Bureau created a new survey called the American Community Survey.  The ACS is administered to 1% of the US population each year, and asks a much more detailed and lengthy series of questions than on the Census, allowing the Census Bureau to keep the Census itself very brief.  Here, we will look at the results of their questions asking about household movement within the 5 boroughs of New York City on the 2014 ACS.
+For this lab, we'll use American Community Survey data.  To help keep response rates for the Census near 100%, in the 1990's, the Census Bureau decided to make the Census shorter, and to get rid of the Long Form Census that was administered to a portion of the population.  They found that longer questionnaires yielded lower response rates.  So, the Census Bureau created a new survey called the American Community Survey.  The ACS is administered to 1% of the US population each year, and asks a much more detailed and lengthy series of questions than on the Census, allowing the Census Bureau to keep the Census itself very brief.  Here, we will look at the results of their questions asking about household movement within the 5 boroughs of New York City on the 2015 ACS.
 
-The code below creates geographies for our pull from the ACS, and then imports data from a specific table already created by the Census Bureau.  Enter in 2014 for the year to tell ACS which year's data we want.
+The code below creates geographies for our pull from the ACS, and then imports data from a specific table already created by the Census Bureau.  Enter in 2015 for the year to tell ACS which year's data we want.
 
 ````{r}
 
@@ -27,7 +27,7 @@ brooklyn <- geo.make(county = "Kings County", state = "NY")
 statenisland <- geo.make(county = "Richmond County", state = "NY")
 nyc_counties <- bronx + manhattan + queens + brooklyn + statenisland
 
-migration <- acs.fetch(geography = nyc_counties, table.number = "B07003", endyear = YEAR, col.names = "pretty")
+migration <- acs.fetch(geography = nyc_counties, table.number = "B07003", endyear = ENTER YEAR HERE, col.names = "pretty")
 
 ````
 
@@ -61,43 +61,91 @@ The ACS provides us with counts, or the estimated number of people that fall wit
 
 ````{r}
 
-estimates$percent_total <- round(100*estimates$Total/estimates$Total)
+# First we create a function to calculate total percent and male-female breakdown.
 
-estimates$percent_male <- round(100*estimates$Male/estimates$Total)
-estimates$percent_female <- round(100*estimates$Female/estimates$Total)
+total_and_gender_percents <- function(x
+                                      ){
+  percent_total <- round(100 * x[[2]]/x[[1]] )
+  percent_male <- round(100 * x[[3]] / x[[2]] )
+  percent_female <- round(100 * x[[4]] / x[[2]])
+  # return a data frame with the three calculated percents
+  subtable <- data.frame(percent_total, percent_male, percent_female)
+  row.names(subtable) <- rownames
+  colnames_list <- names(x)[2:4]
+  colnames(subtable) <- colnames_list
+  subtable
+  
+}
 
-estimates$percent_same_house <- round(100*estimates$Same.house.1.year.ago/estimates$Total)
-estimates$percent_same_house_male <- round(100*estimates$Same.house.1.year.ago.Male/estimates$Same.house.1.year.ago)
-estimates$percent_same_house_female <- round(100*estimates$Same.house.1.year.ago.Female/estimates$Same.house.1.year.ago)
+rownames <- row.names(estimates)
 
-estimates$percent_moved_within_same_county <- round(100*estimates$Moved.within.same.county/estimates$Total)
-estimates$percent_moved_within_same_county_male <- round(100*estimates$Moved.within.same.county.Male/estimates$Moved.within.same.county)
-estimates$percent_moved_within_same_county_female <- round(100*estimates$Moved.within.same.county.Female/estimates$Moved.within.same.county)
+gender <- list("Total" = estimates$Total, 
+              "Total_Male_plus_Female" = estimates$Total, 
+              "Male" = estimates$Male, 
+              "Female" = estimates$Female,
+              "rownames" = rownames)
+              
+# Now we use the function
 
-estimates$percent_moved_from_different_county_within_same_state <- round(100*estimates$Moved.from.different.county.within.same.state/estimates$Total)
-estimates$percent_moved_from_different_county_within_same_state_male <- round(100*estimates$Moved.from.different.county.within.same.state.Male/estimates$Moved.from.different.county.within.same.state)
-estimates$percent_moved_from_different_county_within_same_state_female <- round(100*estimates$Moved.from.different.county.within.same.state.Female/estimates$Moved.from.different.county.within.same.state)
+gender_distribution <- total_and_gender_percents(gender)
 
-estimates$percent_moved_from_different_state <- round(100*estimates$Moved.from.different.state/estimates$Total)
-estimates$percent_moved_from_different_state_male <- round(100*estimates$Moved.from.different.state.Male/estimates$Moved.from.different.state)
-estimates$percent_moved_from_different_state_female <- round(100*estimates$Moved.from.different.state.Female/estimates$Moved.from.different.state)
+same_house <- list("Total" = estimates$Total, 
+                    "Same.house.1.year.ago" = estimates$Same.house.1.year.ago,
+                    "Same.house.1.year.ago.Male" = estimates$Same.house.1.year.ago.Male,
+                    "Same.house.1.year.ago.Female" = estimates$Same.house.1.year.ago.Female,
+                    "row_names" = rownames)
+percent_same_house <- total_and_gender_percents(same_house) 
 
-estimates$percent_moved_from_abroad <- round(100*estimates$Moved.from.abroad/estimates$Total)
-estimates$percent_moved_from_abroad_male <- round(100*estimates$Moved.from.abroad.Male/estimates$Moved.from.abroad)
-estimates$percent_moved_from_abroad_female <- round(100*estimates$Moved.from.abroad.Female/estimates$Moved.from.abroad)
+same_county <- list ("Total" = estimates$Total, 
+                    "Moved.within.same.county" = estimates$Moved.within.same.county,
+                    "Moved.within.same.county.Male" = estimates$Moved.within.same.county.Male,
+                    "Moved.within.same.county.Female" = estimates$Moved.within.same.county.Female,
+                    "row_names" =  rownames)
+percent_moved_same_county <- total_and_gender_percents(same_county) 
+
+different_county_within_same_state <- list( 
+                                 "Total" =  estimates$Total, 
+                         "Moved.from.different.county.within.same.state" = 
+                                  estimates$Moved.from.different.county.within.same.state,
+                          "Moved.from.different.county.within.same.state.Male" =
+                                    estimates$Moved.from.different.county.within.same.state.Male,
+                         "Moved.from.different.county.within.same.state.Female" =
+                                  estimates$Moved.from.different.county.within.same.state.Female,
+                                   "row_names" =  rownames)
+percent_different_county_within_same_state <-
+                                 total_and_gender_percents(different_county_within_same_state) 
+
+from_different_state <- list( "Total" = estimates$Total, 
+            "Moved.from.different.state" = estimates$Moved.from.different.state,
+            "Moved.from.different.state.Male" =  estimates$Moved.from.different.state.Male,
+            "Moved.from.different.state.Female" = estimates$Moved.from.different.state.Female,
+            "row_names" =  rownames)
+percent_moved_from_different_state <- total_and_gender_percents(from_different_state) 
+
+moved_from_abroad <- list("Total" =  estimates$Total, 
+                          "Moved.from.abroad" =  estimates$Moved.from.abroad,
+                          "Moved.from.abroad.Male" = estimates$Moved.from.abroad.Male,
+                           "Moved.from.abroad.Female" = estimates$Moved.from.abroad.Female,
+                          "row_names" = rownames)
+
+percent_moved_from_abroad <-  total_and_gender_percents(moved_from_abroad)
 
 ````
 
-Now, we want to create a separate table with just the percentages.  The code below separates out the variables with percentages from the original count variables.  After separating out the variables we want in our new table, we'll need to flip the rows and columns again using the t() command.  Go ahead an name the datasets.  You'll need one name for the dataset that selects just the variables in percent format, and you'll need a second dataset name for the transposed version.
+Now, we want to create a separate table with just the percentages.  The code below separates out the variables with percentages from the original count variables.  After separating out the variables we want in our new table, we'll need to flip (or transpose) the rows and columns again using the t() command.  Go ahead an name the datasets.  You'll need one name for the dataset that selects just the variables in percent format, and you'll need a second dataset name for the transposed version.
 
 ````{r}
 
-DATA SET NAME FOR PERCENTS TABLE <- dplyr::select(estimates, percent_total, percent_male, percent_female, percent_same_house, percent_same_house_male, percent_same_house_female, percent_moved_within_same_county, percent_moved_within_same_county_male, percent_moved_within_same_county_female, percent_moved_from_different_county_within_same_state, percent_moved_from_different_county_within_same_state_male, percent_moved_from_different_county_within_same_state_female, percent_moved_from_different_state, percent_moved_from_different_state_male, percent_moved_from_different_state_female, percent_moved_from_abroad, percent_moved_from_abroad_male, percent_moved_from_abroad_female)
+YOUR DATA SET NAME FOR PERCENTS TABLE <- cbind(gender_distribution, percent_same_house, 
+                      percent_moved_same_county,
+                      percent_different_county_within_same_state,
+                      percent_moved_from_different_state,
+                      percent_moved_from_abroad)
 
-TRANSPOSED DATASET NAME <- t(DATA SET NAME FOR PERCENTS TABLE)
+YOUR TRANSPOSED DATASET NAME <- t(YOUR DATA SET NAME FOR PERCENTS TABLE)
 
-TRANSPOSED DATASET NAME
+YOUR TRANSPOSED DATASET NAME
 
 ````
 
-Go ahead and knit this template to PDF.  The main results you'll see are two tables, the first with counts, and the second with percentages.  We will interpret these tables in the lab in Blackboard.
+Go ahead and knit this template to PDF.  The main results you'll see are two tables, the first with counts, and the second with percentages.  We will interpret these tables in the lab in Blackboard.  Note that the document will not be wide enough to display the full table.  The submitted PDF will show me that you completed the template, however to view the full tables, you may need to knit to HTML or just view the tables in RStudio.
